# C-

./: .gitignore
ConsoleApplication1/: ConsoleApplication1.sln  ConsoleApplication1.vcxproj
HW2/: HW2.cpp  HW2.sln  HW2.vcxproj  HW2.vcxproj.filters  uniquePtr.cpp  uniquePtr.h
HW3/: HW3.cpp  HW3.sln  HW3.vcxproj  HW3.vcxproj.filters  SharedPtrInt.cpp  SharedPtrInt.h
HW4/: Command.h  CommandScheduler.cpp  CommandScheduler.h  Document.cpp  Document.h  EraseTextCommand.cpp  EraseTextCommand.h  HW4.cpp  HW4.sln  HW4.vcxproj  HW4.vcxproj.filters  InsertTextCommand.cpp  InsertTextCommand.h  ReplaceTextCommand.cpp  ReplaceTextCommand.h
HW5/: HW5.cpp  HW5.sln  HW5.vcxproj  MyTypeOffExtetion.cpp  MyTypeOffExtetion.h
HW6/: Steps.txt
HW6/MyApp/: CMakeLists.txt
HW7/: CMakeLists.txt
HW7/MyApp/: CMakeLists.txt  main.cpp
HW7/mylib/: CMakeLists.txt
HW7/mylib/include/mylib/: MyTypeOffExtetion.h  mylib.hpp  mylib_export.hpp
HW7/mylib/src/: mylib.cpp
HW8/: CMakeLists.txt  client.cpp  example.cpp  server.cpp
OpenCV/: CMakeLists.txt  Install OpenCV.txt  main.cpp
test/: CMakeLists.txt  ConsoleApplication1.cpp
